Fixed ghost button issue with IE on Windows Phone; Fixed overflow issue on Webkit

--- a/jquery.fs.shifter.css
+++ b/jquery.fs.shifter.css
@@ -1,7 +1,7 @@
 /*
  * Shifter Plugin [Formstone Library]
  * @author Ben Plum
- * @version 0.0.3
+ * @version 0.0.4
  *
  * Copyright © 2013 Ben Plum <mr@benplum.com>
  * Released under the MIT License <http://www.opensource.org/licenses/mit-license.php>
@@ -22,7 +22,7 @@
 			     -o-transform: translate3D(0px, 0px, 0px);
 			        transform: translate3D(0px, 0px, 0px);
 		}
-		.shifter .shifter-navigation { background: #fff; display: block; height: 100%; opacity: 1; pointer-events: none; position: absolute; top: 0; width: 270px; z-index: 0; }
+		.shifter .shifter-navigation { background: #fff; display: block; height: 100%; opacity: 1; pointer-events: none; position: fixed; top: 0; width: 270px; z-index: 0; }
 		
 		.shifter .shifter-page,
 		.shifter .shifter-navigation {
@@ -71,6 +71,36 @@
 			    -ms-transform: translate3D(270px, 0px, 0px);
 			     -o-transform: translate3D(270px, 0px, 0px);
 			        transform: translate3D(270px, 0px, 0px);
+		}
+		
+		/* Open */
+		.shifter.shifter-open .shifter-navigation { pointer-events: all; 
+			-webkit-transform: translate3D(0px, 0px, 0px);
+			   -moz-transform: translate3D(0px, 0px, 0px);
+			    -ms-transform: translate3D(0px, 0px, 0px);
+			     -o-transform: translate3D(0px, 0px, 0px);
+			        transform: translate3D(0px, 0px, 0px);
+		}
+	}
+	
+	/* IE 10 ONLY */
+	@media screen and (max-width: 980px) and (-ms-high-contrast: active), (-ms-high-contrast: none) { 
+		/* Right / Default */
+		.shifter .shifter-navigation { right: 0;
+			-webkit-transform: translate3D(270px, 0px, 0px);
+			   -moz-transform: translate3D(270px, 0px, 0px);
+			    -ms-transform: translate3D(270px, 0px, 0px);
+			     -o-transform: translate3D(270px, 0px, 0px);
+			        transform: translate3D(270px, 0px, 0px);
+		}
+		
+		/* Left */
+		.shifter.shifter-left .shifter-navigation { left: 0;
+			-webkit-transform: translate3D(-270px, 0px, 0px);
+			   -moz-transform: translate3D(-270px, 0px, 0px);
+			    -ms-transform: translate3D(-270px, 0px, 0px);
+			     -o-transform: translate3D(-270px, 0px, 0px);
+			        transform: translate3D(-270px, 0px, 0px);
 		}
 		
 		/* Open */
